[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Scripts/botaoPausa.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Player/nina teste/nin1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/nina teste/nin2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/nina teste/nin3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/nina teste/nin4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/nina teste/nin5.png" type="Texture" id=7]
[ext_resource path="res://Audios/cricket ambienc276.ogg" type="AudioStream" id=8]
[ext_resource path="res://Audios/jumpland.wav" type="AudioStream" id=9]
[ext_resource path="res://Audios/full steps stereo.ogg" type="AudioStream" id=10]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.0915527, 0.146866, 0.976563, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.898438, 0.0772095, 0.0772095, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 3.3419, 20.8285 )

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "andando",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 15.2226, 2.08063 )

[sub_resource type="CapsuleShape2D" id=6]

custom_solver_bias = 0.0
radius = 19.0634
height = 30.7512

[node name="Jogador" type="KinematicBody2D"]

scale = Vector2( 0.93566, 0.841528 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility", "Z Index" ]

[node name="ParallaxDeMenu" type="ParallaxBackground" parent="." index="0"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = false

[node name="botaoMenu" type="Button" parent="ParallaxDeMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 169.0
margin_top = 20.0
margin_right = 232.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Menu"
flat = false
align = 1

[node name="lblPontos" type="Label" parent="ParallaxDeMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_top = 27.0
margin_right = 154.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="barraViada" type="ProgressBar" parent="ParallaxDeMenu" index="2"]

modulate = Color( 0.863281, 0.445129, 0.445129, 1 )
self_modulate = Color( 0.75, 0.703125, 0.748169, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 24.0
margin_right = 120.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Percent", "Theme", "Visibility", "custom_styles" ]

[node name="lblVida" type="Label" parent="ParallaxDeMenu" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "VIDA"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="botaoPausa" type="Button" parent="ParallaxDeMenu" index="4"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 20.0
margin_right = 301.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Pausar"
flat = false
align = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Pause" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -23.4154, 8.9497 )
scale = Vector2( 4.12476, 1.58966 )
shape = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]

position = Vector2( -24.7645, 9.56657 )
scale = Vector2( 0.126353, 0.135147 )
frames = SubResource( 4 )
animation = "andando"
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="." index="3"]

position = Vector2( -25.0527, 1.84925 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit", "Smoothing", "Transform" ]

[node name="empurraD" type="RayCast2D" parent="." index="4"]

position = Vector2( -5.84615, 13.5654 )
enabled = false
exclude_parent = true
cast_to = Vector2( 2, 0 )
collision_mask = 8

[node name="empurraE" type="RayCast2D" parent="." index="5"]

position = Vector2( -44.0004, 13.0002 )
enabled = false
exclude_parent = true
cast_to = Vector2( -2, 0 )
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="pes" type="Area2D" parent="." index="6"]

position = Vector2( -26.2028, 44.3465 )
scale = Vector2( 1.01247, 1.12792 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="pes" index="0"]

position = Vector2( 1.63585, -2.24493 )
shape = SubResource( 5 )

[node name="dano" type="Area2D" parent="." index="7"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dano" index="0"]

position = Vector2( -25.066, 8.14173 )
shape = SubResource( 6 )

[node name="TrilhaSonora" type="AudioStreamPlayer2D" parent="." index="8"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="Pulo" type="AudioStreamPlayer2D" parent="." index="9"]

stream = ExtResource( 9 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Passos" type="AudioStreamPlayer2D" parent="." index="10"]

stream = ExtResource( 10 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="pressed" from="ParallaxDeMenu/botaoMenu" to="." method="_on_botaoMenu_pressed"]

[connection signal="pressed" from="ParallaxDeMenu/botaoPausa" to="ParallaxDeMenu/botaoPausa" method="_on_botaoPausa_pressed"]

[connection signal="body_entered" from="pes" to="." method="_on_pes_body_entered"]

[connection signal="body_entered" from="dano" to="." method="_on_dano_body_entered"]


